# receipt-keeper

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: common.rs  config.rs  db.rs  main.rs  migrations.rs
src/gui/: edit_window.rs  edit_window.ui  main_window.rs  main_window.ui  mod.rs  settings_window.rs  settings_window.ui
