[package]
name = "receipt-keeper"
version = "0.1.0"
authors = ["Rafael Medina <rafamedgar@gmail.com>"]

[dependencies.chrono]
version = "0.2"

[dependencies.gtk]
version = "0.1.1"
features = ["v3_14"]

[dependencies.gio]
version = "0.1.1"

[dependencies.glib]
version = "0.1.1"

[dependencies.regex]
version = "0.1"

[dependencies.rusqlite]
version = "0.7.3"
features = ["chrono"]

[dependencies.rust-ini]
version = "0.9"
